# DoctorQ

./: .env_conf_mem  .gitignore  ACESSO.md  Acesso.md  deploy-dev.sh  deploy-prod.sh  ecosystem.config.js
doctorq-api-univ/: .env  .env.docker  .env.exemplo  .gitignore  API_REFERENCE.md  DADOS_REAIS_IMPLEMENTADOS.md  DEPLOYMENT.md  IMPLEMENTACAO_COMPLETA.md  Makefile  QUICK_START.md  README.md  RELEASE_NOTES_v1.1.md  RESUMO_IMPLEMENTACOES_FINAIS.md  pyproject.toml
doctorq-api-univ/database/: PRODUCAO_ESTETIQ_UNIV_COMPLETO.sql  README.md  deploy_completo_estetiq_univ.sql  migration_001_init_universidade.sql  migration_seed_eventos.sql  seed_dados_completos.sql
doctorq-api-univ/src/: __init__.py  main.py
doctorq-api-univ/src/agents/: __init__.py
doctorq-api-univ/src/config/: __init__.py  settings.py
doctorq-api-univ/src/middleware/: __init__.py  auth_middleware.py
doctorq-api-univ/src/models/: __init__.py  certificado.py  curso.py
doctorq-api-univ/src/routes/: __init__.py  certificado.py  notificacao.py  webhook_video.py
doctorq-api-univ/src/services/: __init__.py  certificado_service.py  curso_service.py  email_service.py  pdf_service.py
doctorq-api-univ/tests/: conftest.py
doctorq-service-ai/: .env  .env-exemplo  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
doctorq-service-ai/database/: seed_agente_gisele.sql  seed_agente_gisele_estetiq.sql  seed_agente_gisele_prod.sql
doctorq-service-ai/src/: main.py
doctorq-service-ai/src/agents/: __init__.py  agent_types.py  base_agent.py  dtos.py  dynamic_custom_agent.py  prompt_generator_agent.py  summary_generator_agent.py  title_generator_agent.py
doctorq-service-ai/src/config/: agent_cache.py  cache_config.py  logger_config.py  orm_config.py  settings.py
doctorq-service-ai/src/llms/: ollama.py
doctorq-service-ai/src/models/: __init__.py  agent.py  agent_analytics_schemas.py  agent_schemas.py  agent_tool.py  albuns_orm.py  conversation.py  credencial.py  credencial_schemas.py  curriculo.py  custom_interna_config.py  documento_store.py  documento_store_file_chunk.py  email_log.py  embedding.py  empresa.py  estoque.py  export.py  fornecedor_orm.py  lembrete.py  marketplace.py  mcp_schema.py  message.py  onboarding.py  paciente_orm.py  partner_lead.py  partner_package.py  pedido.py  pedido_orm.py  perfil.py  profissionais_orm.py  profissional_clinica_orm.py  prompt_library.py  record_manager.py  search_schemas.py  template.py  tool.py  user.py  vaga.py  webhook.py
doctorq-service-ai/src/presentes/: __init__.py  agent_presenter.py  variable_presenter.py
doctorq-service-ai/src/routes/: agent.py  analytics_agents.py  apikey.py  conversation.py  credencial.py  documento_store.py  message.py  prediction.py  sync.py  tool.py  variable.py
doctorq-service-ai/src/services/: agent_service.py  analytics_agents_service.py  analytics_service.py  broadcast_service.py  chat_message_service.py  clinica_team_service.py  conversation_service.py  credencial_service.py  documento_store_file_chunk_service.py  documento_store_service.py  documento_store_service_extension.py  empresa_service.py  export_service.py  langchain_service.py  lembrete_service.py  marketplace_service.py  mcp_service.py  onboarding_service.py  partner_activation_service.py  partner_license_service.py  partner_package_service.py  partner_upgrade_service.py  password_reset_service.py  perfil_service.py  permission_service.py  prompt_library_service.py  (+11 more)
(+1561 files in other folders)
